Always output variation classname, fix supernova item edit spacing

--- a/packages/core/src/scss/components/spacing/_style.scss
+++ b/packages/core/src/scss/components/spacing/_style.scss
@@ -1,5 +1,6 @@
 .entry-content,
 .wp-block-column,
+.block-editor-block-list__layout,
 [class*="__inner-container"][class] {
   @include block-spacing-reset;
   @include block-spacing-top-level-multiplier;
